--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^28.1.7"
+  },
+  "dependencies": {
+    "fp-ts": "^2.12.2"
   }
 }
