--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Practice with Markov chains in Node\"",
   "main": "makeText.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest *.test.ts"
   },
   "repository": {
     "type": "git",
